# design-model

./: Bridge.cpp  CMakeLists.txt  Deractor.cpp  Factory.cpp  Observer.cpp  Singleton.cpp  adapter.cpp  common.h  proxy.cpp
